# Atoms_Jerry

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  environment.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/api/: Dockerfile  RULES_IMPLEMENTATION_SUMMARY.md  e2e.db-shm  e2e.db-wal  example_workflow_integration.py  pyproject.toml  requirements.txt  validate_rules.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2b7b6d1a73f1_add_projects.py  4b5c1a7d7d20_add_run_mode_roles_project.py  6a2d4f1c8c10_add_run_user_rules.py  7d9e2c1a4b31_add_run_seed_state.py  cc8f1a2b9b7a_add_password_reset_tokens.py  ccf323d531f5_init.py
apps/api/app/: __init__.py  devserver.py  main.py
apps/api/app/api/: __init__.py  deps.py
apps/api/app/api/routes/: __init__.py  auth.py  projects.py  runs.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  session.py
apps/api/app/db/models/: __init__.py  _mixins.py  oauth_account.py  password_reset_token.py  project.py  run.py  run_artifact.py  run_checkpoint.py  run_event.py  session.py  user.py
apps/api/app/langgraph/: __init__.py  arch_schema.py  executor.py  workflow.py
apps/api/app/llm/: client.py
apps/api/app/rules/: README.md  __init__.py  engine.py  global_rules.py  types.py
apps/api/app/schemas/: __init__.py  auth.py  projects.py  runs.py
apps/api/app/services/: auth_service.py  oauth_clients.py  run_service.py  security.py
apps/api/tests/: conftest.py  test_auth.py  test_projects.py  test_rules_engine.py  test_runs.py
docs/: PRD.md  UI_MAP.md  (+1 more)
(+41 files in other folders)
