[project]
name = "atoms-api"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
  # FastAPI uses `Depends(...)` in function signatures by design.
  "B008",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
